--- a/index.html
+++ b/index.html
@@ -5,7 +5,67 @@
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Hamsa Sarees — Single Page (Fixed)</title>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="style.css">
+  <style>
+    :root{
+      --bg1:#001f3f; --bg2:#00306b; --accent:#00aaff; --accent2:#4dd0e1; --muted:#9fb8d9; --success:#10b981;
+      --card:#071522; --glass:rgba(255,255,255,0.03); --danger:#ff3b3b;
+    }
+    *{box-sizing:border-box}
+    html,body{height:100%;margin:0;font-family:Inter,system-ui,Arial,sans-serif;background:linear-gradient(180deg,var(--bg1),var(--bg2));color:#eaf6ff;-webkit-font-smoothing:antialiased}
+    a{color:inherit;text-decoration:none}
+    .container{max-width:1100px;margin:20px auto;padding:0 16px}
+    header{display:flex;align-items:center;justify-content:space-between;gap:12px;padding:12px;margin-bottom:20px;background:rgba(255,255,255,0.01);border-radius:12px}
+    .brand{display:flex;gap:12px;align-items:center}
+    .logo{width:44px;height:44px;border-radius:10px;background:linear-gradient(135deg,var(--accent),var(--accent2));display:flex;align-items:center;justify-content:center;font-weight:800;color:#032033;box-shadow:0 12px 40px rgba(0,170,255,0.12)}
+    .title{font-weight:800;font-size:18px;line-height:1.2}
+    .small{color:var(--muted);font-size:14px}
+    .search{flex:1;display:flex;align-items:center;gap:8px;padding:10px 12px;background:rgba(255,255,255,0.03);border-radius:10px;border:1px solid rgba(255,255,255,0.06)}
+    .search input{flex:1;background:transparent;border:none;color:#dbeafe;outline:none;font-size:14px}
+    .search input::placeholder{color:var(--muted)}
+    .actions{display:flex;gap:8px;align-items:center}
+    .btn{cursor:pointer;border-radius:10px;padding:9px 14px;border:none;font-weight:700;background:linear-gradient(90deg,var(--accent),#ff5aa3);color:#fff;box-shadow:0 8px 24px rgba(0,170,255,0.12);transition:transform .15s,filter .15s;display:inline-flex;align-items:center;justify-content:center}
+    .btn:active{transform:translateY(1px)}
+    .btn:disabled{opacity:0.6;cursor:not-allowed}
+    .btn-ghost{background:transparent;border:1px solid rgba(255,255,255,0.06);color:#fff;padding:8px 12px;border-radius:10px;cursor:pointer;font-weight:600;transition:background .2s}
+    .btn-ghost:hover{background:rgba(255,255,255,0.05)}
+    .hero{gap:16px;display:flex;flex-direction:column}
+    .hero-card{background:linear-gradient(180deg,#071522,#06121a);padding:20px;border-radius:12px;border:1px solid rgba(255,255,255,0.03)}
+    .hero-card h1{margin:0 0 8px 0;font-size:28px;line-height:1.3}
+    .hero-card p{margin:0 0 14px 0}
+    .promo{background:linear-gradient(180deg,rgba(0,170,255,0.1),rgba(77,208,225,0.05));padding:16px;border-radius:10px;border:1px solid rgba(0,170,255,0.2);text-align:center}
+    .grid{display:grid;grid-template-columns:repeat(auto-fill,minmax(200px,1fr));gap:16px;margin-top:16px}
+    .card{background:linear-gradient(180deg,#071522,#06121a);border-radius:12px;overflow:hidden;border:1px solid rgba(255,255,255,0.03);transition:transform .2s,box-shadow .2s}
+    .card:hover{transform:translateY(-4px);box-shadow:0 16px 40px rgba(0,170,255,0.15)}
+    .tag{position:absolute;top:8px;right:8px;background:linear-gradient(90deg,var(--accent),#ff5aa3);padding:4px 10px;border-radius:6px;font-size:12px;font-weight:700;color:#fff;z-index:10}
+    .imgwrap{position:relative;overflow:hidden;padding-bottom:100%;background:rgba(255,255,255,0.02)}
+    .imgwrap img{position:absolute;inset:0;width:100%;height:100%;object-fit:cover}
+    .card h3{margin:12px;font-size:16px;line-height:1.3}
+    .price{font-weight:800;color:var(--accent2);font-size:16px}
+    .product-rating{font-size:13px;color:var(--success)}
+    .rating-ui{display:flex;gap:4px}
+    .rateBtn{padding:4px 6px;font-size:12px;border-radius:6px;border:none;cursor:pointer;background:transparent;border:1px solid rgba(255,255,255,0.1);color:var(--muted);transition:all .2s}
+    .rateBtn:hover{background:rgba(0,170,255,0.2);color:var(--accent)}
+    .field{display:flex;flex-direction:column;margin-bottom:16px}
+    .field label{font-weight:600;margin-bottom:8px;color:#eaf6ff;font-size:14px}
+    .field input,.field select,.field textarea{padding:12px;border-radius:10px;border:none;background:rgba(8,18,26,0.8);color:#dbeafe;font-size:14px;border:1px solid rgba(255,255,255,0.06);transition:border-color .2s}
+    .field input:focus,.field select:focus,.field textarea:focus{outline:none;border-color:var(--accent);box-shadow:0 0 8px rgba(0,170,255,0.2)}
+    .modal{position:fixed;inset:0;display:none;align-items:center;justify-content:center;background:linear-gradient(180deg,rgba(3,8,20,0.6),rgba(2,8,18,0.85));z-index:1200;padding:12px}
+    .modal.show{display:flex}
+    .modal-box{max-width:720px;width:100%;background:linear-gradient(180deg,#071522,#06121a);border-radius:12px;padding:20px;color:#eaf6ff;position:relative;box-shadow:0 30px 80px rgba(2,6,23,0.6);border:1px solid rgba(255,255,255,0.03);max-height:90vh;overflow-y:auto}
+    .modal-box h2{margin-top:0;margin-bottom:12px;font-size:22px}
+    .close-x{position:absolute;top:12px;right:12px;background:none;border:none;color:#ff5aa3;font-weight:800;font-size:18px;cursor:pointer;transition:transform .2s}
+    .close-x:hover{transform:scale(1.2)}
+    .sr-only{position:absolute!important;height:1px;width:1px;overflow:hidden;clip:rect(1px,1px,1px,1px);white-space:nowrap}
+    button:focus,input:focus,select:focus,textarea:focus{outline:3px solid rgba(0,170,255,0.12);outline-offset:2px}
+    .toast{position:fixed;right:16px;bottom:16px;background:#0b1220;padding:12px 16px;border-radius:10px;color:#d1fae5;border-left:4px solid var(--success);box-shadow:0 8px 30px rgba(2,6,23,0.6);display:none;z-index:2000;font-weight:600}
+    @media (max-width:640px){
+      header{flex-direction:column;align-items:stretch;padding:12px 16px}
+      .actions{flex-wrap:wrap}
+      .grid{grid-template-columns:repeat(auto-fill,minmax(160px,1fr))}
+      .card h3{font-size:14px;margin:10px}
+      .hero-card h1{font-size:24px}
+    }
+  </style>
 </head>
 <body>
   <div class="container">
@@ -115,13 +175,14 @@
       <h2>Admin Panel</h2>
       
       <!-- Add Product Section -->
-      <div style="border-bottom:1px solid rgba(255,255,255,0.06);padding-bottom:16px;margin-bottom:16px">
+      <div style="border-bottom:1px solid rgba(255,255,255,0.06);padding-bottom:16px;margin-bottom:16px;background:rgba(255,255,255,0.01);padding:16px;border-radius:10px">
         <h3 style="margin-top:0;color:#eaf6ff">Add Product</h3>
         <p class="small">Products added here are saved to Firestore (admin-only).</p>
-        <div class="field"><label class="small">Title</label><input id="admin_pTitle" placeholder="Product title"></div>
-        <div class="field"><label class="small">Price (₹)</label><input id="admin_pPrice" type="number" placeholder="1499"></div>
-        <div class="field"><label class="small">Tag</label><input id="admin_pTag" placeholder="e.g. New, Best"></div>
-        <div class="field"><label class="small">Image URL</label><input id="admin_pImg" placeholder="https://..."></div>
+        <div class="field"><label class="small" style="font-weight:600">Title *</label><input id="admin_pTitle" placeholder="Product title" required></div>
+        <div class="field"><label class="small" style="font-weight:600">Price (₹) *</label><input id="admin_pPrice" type="number" placeholder="1499" required></div>
+        <div class="field"><label class="small" style="font-weight:600">Tag</label><input id="admin_pTag" placeholder="e.g. New, Best"></div>
+        <div class="field"><label class="small" style="font-weight:600">Upload Image</label><input id="admin_pImg" type="file" accept="image/*" placeholder="Select image"></div>
+        <div id="admin_imgPreview" style="display:none;margin-top:10px;text-align:center"><img id="admin_imgPreviewImg" style="max-width:200px;max-height:200px;border-radius:8px;border:1px solid rgba(255,255,255,0.1)" alt="Preview" /></div>
         <div style="margin-top:12px;display:flex;gap:8px;justify-content:flex-end">
           <button id="adminSave" class="btn">Add Product</button>
         </div>
@@ -169,13 +230,16 @@
     const { initializeApp } = await import('https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js');
     const authMod = await import('https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js');
     const fsMod = await import('https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js');
+    const storageMod = await import('https://www.gstatic.com/firebasejs/10.7.1/firebase-storage.js');
 
     const { getAuth, GoogleAuthProvider, signInWithPopup, signInWithRedirect, getRedirectResult, signOut, onAuthStateChanged } = authMod;
     const { getFirestore, collection, addDoc, setDoc, doc, deleteDoc, serverTimestamp, query, orderBy, getDocs, onSnapshot } = fsMod;
+    const { getStorage, ref, uploadBytes, getDownloadURL } = storageMod;
 
     const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
     const db = getFirestore(app);
+    const storage = getStorage(app);
     const googleProvider = new GoogleAuthProvider();
 
     // ---- DOM refs ----
@@ -418,17 +482,44 @@
       }
     }
 
+    // Image preview on file select
+    const imgInput = $('admin_pImg');
+    if(imgInput){
+      imgInput.addEventListener('change', (e)=>{
+        const file = e.target.files?.[0];
+        if(file){
+          const reader = new FileReader();
+          reader.onload = (ev) => {
+            const preview = $('admin_imgPreview');
+            const previewImg = $('admin_imgPreviewImg');
+            if(preview && previewImg){ preview.style.display='block'; previewImg.src=ev.target.result; }
+          };
+          reader.readAsDataURL(file);
+        }
+      });
+    }
+
     $('adminSave').addEventListener('click', async ()=>{
-      const title = $('admin_pTitle').value.trim(); const price = Number($('admin_pPrice').value.trim()); const tag = $('admin_pTag').value.trim(); const img = $('admin_pImg').value.trim();
+      const title = $('admin_pTitle').value.trim(); const price = Number($('admin_pPrice').value.trim()); const tag = $('admin_pTag').value.trim();
+      const fileInput = $('admin_pImg');
+      const file = fileInput?.files?.[0];
       if(!title || !price){ alert('Title and price required'); return; }
+      if(!file){ alert('Please select an image'); return; }
       if(!auth.currentUser || auth.currentUser.uid !== ADMIN_UID){ alert('Only admin can add products'); return; }
       try{
-        const payload = { title, price, tag, img, createdAt: serverTimestamp() };
+        const btn = $('adminSave'); btn.disabled=true; btn.innerText='Uploading...';
+        const fileName = `products/${Date.now()}_${file.name}`;
+        const storageRef = ref(storage, fileName);
+        await uploadBytes(storageRef, file);
+        const imgUrl = await getDownloadURL(storageRef);
+        const payload = { title, price, tag, img: imgUrl, createdAt: serverTimestamp() };
         await addDoc(collection(db, 'products'), payload);
-        toast('Product added (Firestore)');
-        $('admin_pTitle').value=''; $('admin_pPrice').value=''; $('admin_pTag').value=''; $('admin_pImg').value='';
+        toast('Product added');
+        $('admin_pTitle').value=''; $('admin_pPrice').value=''; $('admin_pTag').value=''; fileInput.value='';
+        const preview = $('admin_imgPreview'); if(preview) preview.style.display='none';
+        btn.disabled=false; btn.innerText='Add Product';
         await loadAdminProductsList();
-      }catch(err){ console.error('add product failed', err); alert('Failed to add product'); }
+      }catch(err){ console.error('add product failed', err); alert('Failed to add product: ' + (err.message || '')); $('adminSave').disabled=false; $('adminSave').innerText='Add Product'; }
     });
 
     // ---- Generic modal close (fix for all X buttons) ----
@@ -535,5 +626,10 @@
     });
   </script>
 
-</body>
-</html>
+  <footer style="text-align:center;padding:18px;color:#9fb8d9;font-size:13px;line-height:1.6;">
+    ©2025 Hamsa Sarees, unauthorized use is strictly prohibited.<br>
+    Website designed, created & published by Terminal Joint.
+  </footer>
+
+  </body>
+  </html>
