--- a/yourorders.html
+++ b/yourorders.html
@@ -270,8 +270,9 @@
 </script>
 
 
-<footer style="text-align:center;padding:18px;color:#9fb8d9;font-size:13px">
-  © 2025 Hamsa Sarees , unauthorised use is strictly prohibited  ;  WebSite Designed , Created & Published by Terminal Joint
+<footer style="text-align:center;padding:18px;color:#9fb8d9;font-size:13px;line-height:1.6;">
+  ©2025 Hamsa Sarees, unauthorized use is strictly prohibited.<br>
+  Website designed, created & published by Terminal Joint.
 </footer>
 
 </body>
