--- a/payment.html
+++ b/payment.html
@@ -109,6 +109,11 @@
     </main>
   </div>
 
+  <footer>
+    ©2025 Hamsa Sarees, unauthorized use is strictly prohibited.<br>
+    Website designed, created & published by Terminal Joint.
+  </footer>
+
   <div id="toast" class="toast" role="status" aria-live="polite">Saved.</div>
 
 <script type="module">
