--- a/yourorders.html
+++ b/yourorders.html
@@ -4,45 +4,70 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>My Orders — Hamsa Sarees</title>
+<meta http-equiv="Content-Security-Policy" content="
+  default-src 'self';
+  script-src 'self' https://www.gstatic.com/firebasejs/ https://apis.google.com;
+  style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
+  font-src 'self' https://fonts.gstatic.com;
+  connect-src 'self' https://*.firebaseio.com wss://*.firebaseio.com https://www.googleapis.com https://securetoken.googleapis.com;
+  frame-src 'self' https://*.firebaseapp.com;
+  img-src 'self' https: data:;
+  object-src 'none';">
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
 <style>
   :root{
-    --bg1:#001f3f; --bg2:#00306b; --accent:#00aaff; --accent2:#4dd0e1; --muted:#9fb8d9; --success:#10b981;
-    --card:#071522; --glass:rgba(255,255,255,0.03);
+    --bg1: #0d1117; --bg2: #010409; --accent: #238636; --accent-glow: rgba(35, 134, 54, 0.6);
+    --accent-hover: #2ea043; --text-primary: #e6edf3; --text-secondary: #7d8590;
+    --border-color: rgba(255, 255, 255, 0.1); --card-bg: #161b22; --input-bg: #0d1117;
+    --error: #f85149; --error-bg: rgba(248, 81, 73, 0.1); --success:#10b981; --danger:#f85149;
   }
   *{box-sizing:border-box}
-  html,body{height:100%;margin:0;font-family:Inter,system-ui,Arial,sans-serif;background:linear-gradient(180deg,var(--bg1),var(--bg2));color:#eaf6ff;-webkit-font-smoothing:antialiased}
+  html,body{height:100%;margin:0;font-family:Inter,system-ui,Arial,sans-serif;background:var(--bg2);color:var(--text-primary);-webkit-font-smoothing:antialiased}
   a{color:inherit;text-decoration:none}
   .container{max-width:1100px;margin:20px auto;padding:0 16px}
-  header{display:flex;align-items:center;justify-content:space-between;gap:12px;padding:12px;background:rgba(255,255,255,0.01);border-radius:12px;margin-bottom:20px}
-  .brand{display:flex;gap:12px;align-items:center}
-  .logo{width:44px;height:44px;border-radius:10px;background:linear-gradient(135deg,var(--accent),var(--accent2));display:flex;align-items:center;justify-content:center;font-weight:800;color:#032033;box-shadow:0 12px 40px rgba(0,170,255,0.12)}
-  .title{font-weight:800;font-size:18px;line-height:1.2}
+  header{display:flex;align-items:center;justify-content:space-between;gap:12px;padding:12px 0;margin-bottom:24px}
+  .brand{display:flex;gap:14px;align-items:center}
+  .logo{width:48px;height:48px;border-radius:50%;background:linear-gradient(135deg, #f9ce34, #ee2a7b, #6228d7);display:flex;align-items:center;justify-content:center;font-weight:800;color:#fff;font-size:20px;box-shadow:0 8px 30px rgba(0,0,0,0.3);}
+  .title{font-weight:700;font-size:20px;line-height:1.2}
   .actions{display:flex;gap:8px;align-items:center}
-  .btn{cursor:pointer;border-radius:10px;padding:9px 14px;border:none;font-weight:700;background:linear-gradient(90deg,var(--accent),#ff5aa3);color:#fff;box-shadow:0 8px 24px rgba(0,170,255,0.12);transition:transform .15s,filter .15s}
-  .btn:active{transform:translateY(1px)}
+  .btn{
+    cursor:pointer; border-radius:8px; padding:9px 16px; border:1px solid var(--accent); font-weight:700;
+    background:var(--accent); color:#fff; box-shadow:0 1px 0 rgba(255,255,255,0.1) inset, 0 4px 12px rgba(0,0,0,0.4);
+    transition: all .2s ease; display:inline-flex; align-items:center; justify-content:center; gap: 8px;
+  }
+  .btn:hover:not(:disabled){background:var(--accent-hover); border-color:var(--accent-hover);}
+  .btn:active:not(:disabled){transform:translateY(1px); box-shadow:0 1px 0 rgba(255,255,255,0.1) inset, 0 2px 6px rgba(0,0,0,0.4);}
   .btn:disabled{opacity:0.6;cursor:not-allowed}
-  .btn-ghost{background:transparent;border:1px solid rgba(255,255,255,0.06);color:#fff;padding:8px 12px;border-radius:10px;cursor:pointer;font-weight:600}
-  .btn-ghost:hover{background:rgba(255,255,255,0.05)}
-  .small{color:var(--muted);font-size:14px}
+  .btn-ghost{
+    background:transparent; border:1px solid var(--border-color); color:var(--text-secondary);
+    box-shadow:none; font-weight:600; padding:8px 14px; border-radius:8px;
+  }
+  .btn-ghost:hover{background:var(--card-bg); color:var(--text-primary); border-color:var(--text-secondary);}
+  .small{color:var(--text-secondary);font-size:14px}
   main h1{font-size:28px;margin-bottom:8px}
-  .order-card{background:linear-gradient(180deg,#071522,#06121a);padding:16px;border-radius:12px;margin-bottom:12px;border:1px solid rgba(255,255,255,0.03);transition:transform .2s,box-shadow .2s}
-  .order-card:hover{transform:translateY(-4px);box-shadow:0 16px 40px rgba(0,170,255,0.15)}
+  .order-card{background:var(--card-bg);padding:20px;border-radius:12px;margin-bottom:16px;border:1px solid var(--border-color);transition:transform .2s,box-shadow .2s}
+  .order-card:hover{transform:translateY(-4px);box-shadow:0 16px 40px rgba(0,0,0,0.3)}
   .order-card-header{display:flex;justify-content:space-between;align-items:flex-start;margin-bottom:12px;gap:12px}
   .order-info{flex:1}
-  .order-info strong{color:#eaf6ff;display:block;margin-bottom:6px;font-size:16px}
+  .order-info strong{color:var(--text-primary);display:block;margin-bottom:6px;font-size:16px}
   .order-info div{margin-bottom:4px;font-size:14px}
   .order-actions{display:flex;gap:8px;flex-direction:column}
-  .toast{position:fixed;right:16px;bottom:16px;background:#0b1220;padding:10px 14px;border-radius:10px;color:#d1fae5;border-left:4px solid var(--success);box-shadow:0 8px 30px rgba(2,6,23,0.6);display:none;z-index:2000;font-weight:600}
-  .modal{position:fixed;inset:0;display:none;align-items:center;justify-content:center;background:linear-gradient(180deg,rgba(3,8,20,0.6),rgba(2,8,18,0.85));z-index:1200;padding:12px}
+  .toast{
+    position:fixed; right:16px; bottom:16px; background:#1f2937; padding:12px 18px;
+    border-radius:8px; color:var(--text-primary); border-left:4px solid var(--accent);
+    box-shadow:0 10px 40px rgba(0,0,0,0.5); display:none; z-index:2000; font-weight:600;
+    animation:toast-in .3s ease;
+  }
+  @keyframes toast-in { from { transform: translateY(20px); opacity: 0; } }
+  .modal{position:fixed;inset:0;display:none;align-items:center;justify-content:center;background:rgba(1,4,9,0.8);z-index:1200;padding:12px}
   .modal.show{display:flex}
-  .modal-box{max-width:720px;width:100%;background:linear-gradient(180deg,#071522,#06121a);border-radius:12px;padding:20px;color:#eaf6ff;position:relative;box-shadow:0 30px 80px rgba(2,6,23,0.6);border:1px solid rgba(255,255,255,0.03);max-height:90vh;overflow-y:auto}
+  .modal-box{max-width:720px;width:100%;background:var(--card-bg);border-radius:12px;padding:24px;color:var(--text-primary);position:relative;box-shadow:0 30px 80px rgba(0,0,0,0.5);border:1px solid var(--border-color);max-height:90vh;overflow-y:auto}
   .modal-box h2{margin-top:0;margin-bottom:12px;font-size:22px}
-  .close-x{position:absolute;top:12px;right:12px;background:transparent;border:none;color:#ff5aa3;font-weight:800;font-size:18px;cursor:pointer;transition:transform .2s}
+  .close-x{position:absolute;top:12px;right:12px;background:none;border:none;color:var(--text-secondary);font-weight:800;font-size:18px;cursor:pointer;transition:transform .2s}
   .close-x:hover{transform:scale(1.2)}
   .sr-only{position:absolute!important;height:1px;width:1px;overflow:hidden;clip:rect(1px,1px,1px,1px);white-space:nowrap}
-  button:focus,input:focus,select:focus{outline:3px solid rgba(0,170,255,0.12);outline-offset:3px}
-  footer{text-align:center;padding:18px;color:#9fb8d9;font-size:12px;margin-top:20px;border-top:1px solid rgba(255,255,255,0.06)}
+  button:focus-visible, a:focus-visible{outline:3px solid var(--accent-glow); outline-offset:2px; border-radius: 8px;}
+  footer{text-align:center;padding:24px;color:var(--text-secondary);font-size:12px;margin-top:20px;border-top:1px solid var(--border-color)}
   @media (max-width:640px){
     header{flex-direction:column;align-items:stretch;padding:12px 16px}
     main h1{font-size:24px}
@@ -57,13 +82,13 @@
       <div class="brand">
         <div class="logo" aria-hidden="true">HS</div>
         <div>
-          <div class="title">Hamsa Sarees<br> ! This Site Is Under Construction !</div>
+          <div class="title">Hamsa Sarees</div>
           <div class="small">Handpicked • Ethnic • Quality</div>
         </div>
       </div>
 
       <div class="actions">
-        <div id="userBadge" style="display:none;background:rgba(255,255,255,0.03);padding:8px 10px;border-radius:10px;color:#fff;font-weight:700"></div>
+        <div id="userBadge" style="display:none;background:var(--input-bg);padding:8px 12px;border-radius:8px;color:var(--text-primary);font-weight:600;border:1px solid var(--border-color);"></div>
         <button id="signOutBtn" class="btn-ghost" style="display:none">Sign out</button>
         <button id="loginShowBtn" class="btn">Sign in</button>
         <a href="index.html" class="btn-ghost">Back to Shop</a>
@@ -76,7 +101,7 @@
         <p class="small">View and manage your saved orders. Sign in to see your orders.</p>
         
         <div id="ordersContainer" style="margin-top:16px">
-          <div class="small" style="text-align:center;color:var(--muted);padding:32px">
+          <div class="small" style="text-align:center;color:var(--text-secondary);padding:32px; border: 1px dashed var(--border-color); border-radius: 12px;">
             Please sign in to view your orders
           </div>
         </div>
@@ -96,7 +121,7 @@
 
   <div id="toast" class="toast" role="status" aria-live="polite">Saved.</div>
 
-<script type="module">
+<script type="module" id="main-script">
 (async function(){
   if(document.readyState === 'loading') await new Promise(r=>document.addEventListener('DOMContentLoaded', r));
 
@@ -174,7 +199,7 @@
     // ---- Load and display user orders ----
     async function loadUserOrders(){
       if(!auth.currentUser){
-        ordersContainer.innerHTML = '<div class="small" style="text-align:center;color:var(--muted);padding:32px">Please sign in to view your orders</div>';
+        ordersContainer.innerHTML = '<div class="small" style="text-align:center;color:var(--text-secondary);padding:32px; border: 1px dashed var(--border-color); border-radius: 12px;">Please sign in to view your orders</div>';
         return;
       }
       ordersContainer.innerHTML = '<div class="small" style="text-align:center;padding:16px">Loading orders...</div>';
@@ -183,7 +208,7 @@
         const q = query(collection(db, `users/${uid}/orders`), orderBy('createdAt','desc'));
         const snap = await getDocs(q);
         if(snap.empty){
-          ordersContainer.innerHTML = '<div class="small" style="text-align:center;color:var(--muted);padding:32px">No orders yet. <a href="index.html" style="color:var(--accent)">Start shopping</a></div>';
+          ordersContainer.innerHTML = '<div class="small" style="text-align:center;color:var(--text-secondary);padding:32px; border: 1px dashed var(--border-color); border-radius: 12px;">No orders yet. <a href="index.html" style="color:var(--accent-hover)">Start shopping</a></div>';
           return;
         }
         ordersContainer.innerHTML = '';
@@ -199,11 +224,11 @@
                 <strong>${escapeHtml(o.product||'')}</strong>
                 <div class="small">${escapeHtml(o.name||'')}</div>
                 <div class="small">${escapeHtml(o.phone||'')}</div>
-                <div class="small" style="color:var(--muted);margin-top:6px">${escapeHtml(dt)}</div>
+                <div class="small" style="color:var(--text-secondary);margin-top:6px">${escapeHtml(dt)}</div>
               </div>
               <div class="order-actions">
                 <button class="btn-ghost viewOrderBtn" data-id="${id}" type="button">View Details</button>
-                <button class="btn deleteOrderBtn" data-id="${id}" type="button" style="background:linear-gradient(90deg,#ff3b3b,#ff5252)">Delete Order</button>
+                <button class="btn deleteOrderBtn" data-id="${id}" type="button" style="background:var(--danger); border-color:var(--danger);">Delete Order</button>
               </div>
             </div>
           `;
@@ -225,20 +250,33 @@
         });
 
         ordersContainer.querySelectorAll('.viewOrderBtn').forEach(b=>{
-          b.addEventListener('click', ev=>{
+          b.addEventListener('click', async ev=>{
             const btn = ev.currentTarget;
-            const card = btn.closest('.order-card');
-            const p = card.querySelector('strong').textContent || '';
-            const n = Array.from(card.querySelectorAll('.small'))[0]?.textContent || '';
-            const ph = Array.from(card.querySelectorAll('.small'))[1]?.textContent || '';
-            const addressParts = [];
-            // Try to extract address from data attributes if available
-            orderDetailContent.innerText = `Product: ${p}\nName: ${n}\nPhone: ${ph}\n\nFull order details loaded from your account.`;
+            const id = btn.getAttribute('data-id');
+            if(!id || !auth.currentUser) return;
+
+            orderDetailContent.innerText = 'Loading order details...';
+            openModal(orderDetailModal);
+
+            try {
+              const uid = auth.currentUser.uid;
+              const orderRef = doc(db, 'users', uid, 'orders', id);
+              const docSnap = await getDoc(orderRef);
+              if (docSnap.exists()) {
+                const d = docSnap.data();
+                orderDetailContent.innerText = `Product: ${d.product || 'N/A'}\nPrice: ₹${d.price || 'N/A'}\nName: ${d.name || 'N/A'}\nPhone: ${d.phone || 'N/A'}\nAddress: ${d.address || 'N/A'}\n\nPayment Method: ${d.paymentMethod || 'N/A'}\nPayment ID: ${d.paymentId || 'N/A'}\nOrder Date: ${(d.createdAt?.toDate() || new Date()).toLocaleString()}`;
+              } else {
+                orderDetailContent.innerText = 'Could not find order details.';
+              }
+            } catch (err) {
+              console.error('Failed to fetch order details', err);
+              orderDetailContent.innerText = 'Error loading details. Please try again.';
+            }
             openModal(orderDetailModal);
           });
         });
 
-      }catch(e){ console.error('fetch orders failed', e); ordersContainer.innerHTML = '<div class="small" style="text-align:center;color:#ffb4b4;padding:32px">Failed to load orders. Try signing in again.</div>'; }
+      }catch(e){ console.error('fetch orders failed', e); ordersContainer.innerHTML = `<div class="small" style="text-align:center;color:var(--error);padding:32px; border: 1px dashed var(--error-bg); border-radius: 12px;">Failed to load orders. Try signing in again.</div>`; }
     }
 
     // ---- Auth state changes: UI toggle ----
@@ -252,7 +290,7 @@
         if(userBadge) userBadge.style.display='none';
         if(signOutBtn) signOutBtn.style.display='none';
         if(loginShowBtn) loginShowBtn.style.display='inline-block';
-        ordersContainer.innerHTML = '<div class="small" style="text-align:center;color:var(--muted);padding:32px">Please sign in to view your orders</div>';
+        ordersContainer.innerHTML = '<div class="small" style="text-align:center;color:var(--text-secondary);padding:32px; border: 1px dashed var(--border-color); border-radius: 12px;">Please sign in to view your orders</div>';
       }
     });
 
@@ -270,7 +308,14 @@
 </script>
 
 
-<footer style="text-align:center;padding:18px;color:#9fb8d9;font-size:13px;line-height:1.6;">
+<footer style="text-align:center;padding:24px;color:var(--text-secondary);font-size:12px;margin-top:20px;border-top:1px solid var(--border-color);line-height:1.8;">
+  <div class="policy-links" style="margin-bottom: 16px; display: flex; justify-content: center; gap: 8px 16px; flex-wrap: wrap;">
+    <a href="https://merchant.razorpay.com/policy/RqTr3sOZEqSD8V/privacy" target="_blank" style="color: var(--text-secondary); text-decoration: underline;">Privacy Policy</a>
+    <a href="https://merchant.razorpay.com/policy/RqTr3sOZEqSD8V/terms" target="_blank" style="color: var(--text-secondary); text-decoration: underline;">Terms & Conditions</a>
+    <a href="https://merchant.razorpay.com/policy/RqTr3sOZEqSD8V/shipping" target="_blank" style="color: var(--text-secondary); text-decoration: underline;">Shipping</a>
+    <a href="https://merchant.razorpay.com/policy/RqTr3sOZEqSD8V/refund" target="_blank" style="color: var(--text-secondary); text-decoration: underline;">Cancellation & Refunds</a>
+    <a href="https://merchant.razorpay.com/policy/RqTr3sOZEqSD8V/contact_us" target="_blank" style="color: var(--text-secondary); text-decoration: underline;">Contact Us</a>
+  </div>
   ©2025 Hamsa Sarees, unauthorized use is strictly prohibited.<br>
   Website designed, created & published by Terminal Joint.
 </footer>
