--- a/yourorders.html
+++ b/yourorders.html
@@ -109,13 +109,25 @@
     </main>
   </div>
 
+  <!-- Login Modal -->
+  <div class="modal" id="loginModal" aria-hidden="true">
+    <div class="modal-box" role="dialog" aria-modal="true" style="max-width: 400px;">
+      <button class="close-x" title="Close">✕</button>
+      <h2>Sign in with Google</h2>
+      <p class="small">Sign in to view your order history.</p>
+      <div style="display:flex;justify-content:center;margin-top:12px">
+        <button id="googleBtnLarge" class="btn">Sign in with Google</button>
+      </div>
+      <p id="loginErr" class="small" style="margin-top:12px;color:var(--error);display:none"></p>
+    </div>
+  </div>
+
   <!-- Order Detail Modal -->
   <div class="modal" id="orderDetailModal" aria-hidden="true">
     <div class="modal-box" role="dialog" aria-modal="true">
       <button class="close-x" id="closeOrderDetail" title="Close">✕</button>
       <h2>Order Details</h2>
       <div id="orderDetailContent" class="small" style="white-space:pre-line;margin-top:8px"></div>
-      <div style="display:flex;gap:10px;margin-top:12px;justify-content:flex-end"><button id="closeDetailBtn" class="btn-ghost">Close</button></div>
     </div>
   </div>
 
@@ -160,6 +172,8 @@
     const loginShowBtn = $('loginShowBtn');
     const ordersContainer = $('ordersContainer');
     const toastEl = $('toast');
+    const loginModal = $('loginModal');
+    const loginErr = $('loginErr');
     const orderDetailModal = $('orderDetailModal');
     const orderDetailContent = $('orderDetailContent');
 
@@ -179,20 +193,27 @@
 
     try{ const rr = await getRedirectResult(auth); if(rr && rr.user) console.log('redirect sign-in OK', rr.user.uid); }catch(e){ console.warn('redirect result', e && e.code); }
 
+    function showLoginError(msg){ if(!loginErr) return; loginErr.innerText = msg; loginErr.style.display = msg ? 'block' : 'none'; }
+
     async function signInPopup(){
+      showLoginError('');
       try{ await signInWithPopup(auth, googleProvider); toast('Signed in'); }catch(e){
         console.error('sign-in error', e && e.code, e && e.message);
         const popupErrors = ['auth/popup-blocked','auth/popup-closed-by-user','auth/cancelled-popup-request'];
         if(e && popupErrors.includes(e.code)){
-          try{ await signInWithRedirect(auth, googleProvider); return; }catch(err){ alert('Popup blocked and redirect failed. Allow popups or try another browser.'); return; }
+          try{ await signInWithRedirect(auth, googleProvider); return; }catch(err){ showLoginError('Popup blocked and redirect failed. Allow popups or try another browser.'); return; }
         }
         if(e && e.code === 'auth/unauthorized-domain'){
-          alert('Domain not authorized. Add your hosting domain in Firebase console → Authentication → Authorized domains.');
-        } else alert(e && e.message ? e.message : 'Sign-in failed');
+          showLoginError('Domain not authorized. Add your hosting domain in Firebase console → Authentication → Authorized domains.');
+        } else showLoginError(e && e.message ? e.message : 'Sign-in failed');
       }
     }
 
-    loginShowBtn && loginShowBtn.addEventListener('click', ()=>signInPopup());
+    loginShowBtn && loginShowBtn.addEventListener('click', ()=>{
+      openModal(loginModal);
+    });
+    
+    $('googleBtnLarge')?.addEventListener('click', ()=>signInPopup());
 
     signOutBtn && signOutBtn.addEventListener('click', async () => { try{ await signOut(auth); toast('Signed out'); }catch(e){ console.error('signout failed', e); } });
 
@@ -200,7 +221,7 @@
     async function loadUserOrders(){
       if(!auth.currentUser){
         ordersContainer.innerHTML = '<div class="small" style="text-align:center;color:var(--text-secondary);padding:32px; border: 1px dashed var(--border-color); border-radius: 12px;">Please sign in to view your orders</div>';
-        return;
+        return; // Stop execution if not signed in
       }
       ordersContainer.innerHTML = '<div class="small" style="text-align:center;padding:16px">Loading orders...</div>';
       try{
@@ -282,6 +303,7 @@
     // ---- Auth state changes: UI toggle ----
     onAuthStateChanged(auth, user=>{
       if(user){
+        closeModal(loginModal);
         if(userBadge){ userBadge.style.display='inline-block'; userBadge.innerText = user.displayName || user.email; }
         if(signOutBtn) signOutBtn.style.display='inline-block';
         if(loginShowBtn) loginShowBtn.style.display='none';
@@ -296,7 +318,6 @@
 
     // ---- Modal close handlers ----
     document.querySelectorAll('.close-x').forEach(btn=>{ btn.addEventListener('click', ()=>{ const modal = btn.closest('.modal'); closeModal(modal); }); });
-    $('closeOrderDetail')?.addEventListener('click', ()=>{ closeModal(orderDetailModal); });
 
     console.log('Hamsa Sarees My Orders page ready');
   }catch(err){
